# airlog

./: CONTRIBUTING.md  Cargo.toml  INSTALL.md  README.md  SECURITY.md
airlog/: Cargo.toml
airlog-sdk/: Cargo.toml
airlog-sdk/src/: env.rs  lib.rs
airlog-sdk/src/plugin/: mod.rs
airlogd/: Cargo.toml
airlogd/src/: main.rs  pipeline.rs  plugin_loader_splited.rs
airlogd/src/plugin_api/: mod.rs
docs/: README.md  i18n_guide.md
plugins/debugger/: Cargo.toml
plugins/debugger/src/: lib.rs
plugins/syslog-frontend/: Cargo.toml
plugins/textfile-backend/: Cargo.toml
plugins/textfile-backend/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: dist.rs  env.rs  main.rs
